--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
     </div>
 
     <div class="topnav">
-        <a href="main.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="#about">About</a>
         <a href="resto.html">Cafe/resto</a>
         <a href="gallery.html">Gallery</a>
