--- a/gallery.html
+++ b/gallery.html
@@ -70,7 +70,7 @@
     </div>
 
     <div class="topnav">
-        <a href="main.html">Home</a>
+        <a href="index.html">Home</a>
     </div>
 
     <h1>GALLERY</h1>
