--- a/resto.html
+++ b/resto.html
@@ -127,7 +127,7 @@
     </div>
 
     <div class="topnav">
-        <a href="main.html">Home</a>
+        <a href="index.html">Home</a>
     </div>
 
     <div class="header">
